--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 streamlit>=1.32,<1.37
 newspaper3k
-transformers>=4.46,<4.49
-tokenizers>=0.20.3
-torch>=2.5,<2.9
+transformers==4.41.2
+tokenizers==0.19.1
+torch==2.1.2
 gTTS
 moviepy==2.0.0
 imageio-ffmpeg
 pillow
-numpy>=2.0
+numpy<2.0
 feedparser
 nltk
 lxml_html_clean
