--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ transformers==4.41.2
 tokenizers==0.19.1
 torch==2.5.1
 gTTS
-moviepy==1.0.3        # 👈 revert to 1.x (has moviepy.editor)
+moviepy==1.0.3        # revert to 1.x (has moviepy.editor)
 imageio-ffmpeg
 pillow
-numpy<2.0              # 👈 required for moviepy 1.x
+numpy<2.0              # required for moviepy 1.x
 feedparser
 nltk
 lxml_html_clean
