--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-# generated media
+# Ignore generated media
 output/*
-archive/*
 
-# keep the archive index
-!archive/log.jsonl
-
-# python cache
+# Python cache
 __pycache__/
 *.pyc
 
-# streamlit cache
+# Streamlit cache
 .streamlit/cache/
